comitando flex turismo

--- a/index.html
+++ b/index.html
@@ -12,18 +12,34 @@
 <body>
     <header>
         <div class="menu">
-            <div><h1>Flexturismo</h1></div>
+            <div>
+                <h1>Flexturismo</h1>
+            </div>
             <nav>
 
                 <ul class="list-item">
-                    <li><a href="#quem-somos">Quem Somos</a></li>
-                    <li><a href="#serviços">serviços</a></li>
+                    <li><a href="#Quem-somos">Quem Somos</a></li>
+                    <li><a href="#Serviços">serviços</a></li>
                     <li><a href="#Planos">Planos</a></li>
                 </ul>
 
             </nav>
         </div>
     </header>
+    <main>
+        <div class="apresentacao">
+            <div class="txt-apresentacao">
+                <h2>Flex<br>Turismo</h2>
+                <p>O melhor serviço para você !</p>
+                <a href="" class="btn">Sabia Mais !</a>
+            </div>
+
+            <div class="img-direita">
+                <img src="IMG/0-main.png" alt="banner">
+            </div>
+        </div>
+
+    </main>
 
 </body>
 
